src/test/deca/syntax/invalid/extension/TabSansTaille.deca
// mismatched input ']' expecting {STRING, '{', '(', 'false', 'true', 'readInt', 'readFloat', 'new', 'this', 'null', '-', '!', FLOAT, INT, IDENT}
// Description:
//    Tableau sans taille lors de la création
//

{
    int[] a = new float[];
}
